Bug 58196 - VIEWING: Mirrored bitmaps are displayed unmirrored, but print mirrored.
Summary: VIEWING: Mirrored bitmaps are displayed unmirrored, but print mirrored.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.1.0 target:4.0.0.0.beta2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-12-12 14:58 UTC by Werner
Modified: 2015-01-11 04:19 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot: lo 3.6.4.3 and 4.0.0.0.beta1 on Windows XP (66.51 KB, image/jpeg)
2012-12-12 14:58 UTC, Werner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Werner 2012-12-12 14:58:34 UTC
Created attachment 71391 [details]
Screenshot: lo 3.6.4.3 and 4.0.0.0.beta1 on Windows XP

Mirrored bitmap images are displayed unmirrored in writer and in page preview. In the preview window of the print dialog they are displayed correctly, print output as well as pdf export are ok.

svg-images are ok.

The attached screenshot compares LibreOffice Version 3.6.4.3 (Build ID: 2ef5aff), left side, and LibreOffice Version 4.0.0.0.beta1 (Build ID: 87906242e87d3ddb2ba9827818f2d1416d80cc7), right side, on Windows XP.
Top row are svg images (left side normal, right side flipped horizontally). The bottom row are identical png images.

Version 4.1.0.0.alpha0+ (Build ID: c88508bc53e7df7ead7bc1b102da3d7dd81f768) on debian shows the same bug.

Steps to reproduce:
1. load png image in writer.
2. flip image horizontally

Current behavior:
unflipped image is shown, flipped image is printed.

              
Operating System: All
Last worked in: 3.6.4.3 release
Comment 1 Werner 2012-12-13 19:08:48 UTC
Bug seems to be introduced by commit I6feb744712956a92d6140d079dc3a85ee8511930 (Stepwise rebuild bitmap rendering from scratch to avoid rendering bugs).
In order to reproduce you need a bitmap which is scaled down sufficiently.
Comment 2 Werner 2012-12-13 21:06:58 UTC
It seems that commit I6feb744712956a92d6140d079dc3a85ee8511930
missed horizontal and vertical flipping for images scaled down
by more than about 60%.

See https://gerrit.libreoffice.org/1332
Comment 3 Michael Stahl 2012-12-17 21:30:21 UTC
seems to happen mostly as described, except that i can't
get a wrongly rotated image in the document view,
it's only wrongly (not) rotated in File->Page Preview...
Comment 4 Not Assigned 2012-12-17 21:40:38 UTC
Werner Koerner committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d969a60852d505cfa02a6b3410d4461718138ba

fdo#58196 Viewing: Reenable mirroring for scaled-down images



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Not Assigned 2012-12-17 22:27:57 UTC
Werner Koerner committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5cb9fe63458558951f91ed1aaf6e90472dff9a28&g=libreoffice-4-0

fdo#58196 Viewing: Reenable mirroring for scaled-down images


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2012-12-18 11:03:40 UTC
ok should be fixed now; thanks Werner for finding & fixing this!