fdo#58196 Viewing: Reenable mirroring for scaled-down images

commit I6feb744712956a92d6140d079dc3a85ee8511930 (Stepwise
rebuild bitmap rendering from scratch to avoid rendering bugs)
missed horizontal and vertical flipping for images scaled down
by more than about 60%.

Change-Id: I68241792d2b43edde33f478c998d447debd8fd13